--- a/group-note/package.json
+++ b/group-note/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "^5.9.9",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
+    "expo-sqlite": "~8.5.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.2.1",
     "react": "16.13.1",
