--- a/group-note/package.json
+++ b/group-note/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "^5.9.9",
     "@react-navigation/bottom-tabs": "^5.11.2",
@@ -15,6 +16,7 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
+    "expo-notifications": "~0.8.2",
     "expo-sqlite": "~8.5.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.2.1",
@@ -24,6 +26,7 @@
     "react-native-elements": "^3.0.1",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
+    "react-native-restart": "^0.0.20",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-vector-icons": "^7.1.0",
